Extracted and cleaned store data

--- a/displaying_df.ipynb
+++ b/displaying_df.ipynb
@@ -577,59 +577,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "clean_expiry_date() missing 1 required positional argument: 'output_invalidated'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 26\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     24\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[1;32m---> 26\u001b[0m expiry_df \u001b[38;5;241m=\u001b[39m \u001b[43mclean_expiry_date\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcard_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mexpiry_date\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     27\u001b[0m expiry_df\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m30\u001b[39m)\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# cleaner = clean.DataCleaning()\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m# clean_card_df = cleaner.clean_card_data(card_df)\u001b[39;00m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# clean_card_df[\"expiry_date\"] = pd.to_datetime(clean_card_df[\"expiry_date\"], errors='coerce')\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;66;03m# clean_card_df[\"expiry_date\"] = clean_card_df[\"expiry_date\"].dt.to_period('M').dt.strftime('%m/%y')\u001b[39;00m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# clean_card_df.head()\u001b[39;00m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;66;03m# clean_card_df.info()\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: clean_expiry_date() missing 1 required positional argument: 'output_invalidated'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nikit\\Desktop\\AiCore\\command_line\\multinational-retail-data-centralisation901\\data_cleaning.py:257: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['card_number'] = df['card_number'].astype(str)\n",
+      "c:\\Users\\nikit\\Desktop\\AiCore\\command_line\\multinational-retail-data-centralisation901\\data_cleaning.py:259: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['card_provider'] = df.apply(__clean_card_provider, axis=1)\n",
+      "c:\\Users\\nikit\\Desktop\\AiCore\\command_line\\multinational-retail-data-centralisation901\\data_cleaning.py:260: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['card_number'] = df.apply(__clean_card_number, axis=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 15285 entries, 0 to 15308\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                  Non-Null Count  Dtype         \n",
+      "---  ------                  --------------  -----         \n",
+      " 0   card_number             15103 non-null  object        \n",
+      " 1   expiry_date             15231 non-null  object        \n",
+      " 2   card_provider           15284 non-null  object        \n",
+      " 3   date_payment_confirmed  15284 non-null  datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), object(3)\n",
+      "memory usage: 597.1+ KB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nikit\\Desktop\\AiCore\\command_line\\multinational-retail-data-centralisation901\\data_cleaning.py:83: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[target_col] = df[target_col].astype(str).apply(parse_flexible_date)\n",
+      "c:\\Users\\nikit\\Desktop\\AiCore\\command_line\\multinational-retail-data-centralisation901\\data_cleaning.py:84: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[target_col] = pd.to_datetime(df[target_col], format=date_format, errors='coerce')\n",
+      "c:\\Users\\nikit\\Desktop\\AiCore\\command_line\\multinational-retail-data-centralisation901\\data_cleaning.py:250: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[target_col] = df[target_col].astype(str).apply(process)\n"
      ]
     }
    ],
    "source": [
-    "# Cleaning\n",
-    "\n",
-    "import data_cleaning as clean\n",
-    "import re\n",
-    "import numpy as np\n",
-    "\n",
-    "def clean_expiry_date(df, target_col, output_invalidated=False):\n",
-    "    expiry_regex = r'\\d{2}/\\d{2}'\n",
-    "    invalid_entries = []\n",
-    "    \n",
-    "    def process(entry):\n",
-    "        match = re.match(expiry_regex, entry)\n",
-    "        if match:\n",
-    "            return entry\n",
-    "        else: \n",
-    "            invalid_entries.append(entry)\n",
-    "            return np.nan\n",
-    "    \n",
-    "    df[target_col] = df[target_col].astype(str).apply(process)\n",
-    "\n",
-    "    if output_invalidated:\n",
-    "        return invalid_entries\n",
-    "    else:\n",
-    "        return df\n",
-    "\n",
-    "expiry_df = clean_expiry_date(card_df, \"expiry_date\")\n",
-    "expiry_df.head(30)\n",
-    "# cleaner = clean.DataCleaning()\n",
-    "# clean_card_df = cleaner.clean_card_data(card_df)\n",
-    "# clean_card_df[\"expiry_date\"] = pd.to_datetime(clean_card_df[\"expiry_date\"], errors='coerce')\n",
-    "# clean_card_df[\"expiry_date\"] = clean_card_df[\"expiry_date\"].dt.to_period('M').dt.strftime('%m/%y')\n",
-    "# clean_card_df.head()\n",
-    "# clean_card_df.info()\n",
-    "\n",
-    "\n",
-    "\n"
+    "cleaner = clean.DataCleaning()\n",
+    "clean_card_df = cleaner.clean_card_data(card_df)\n",
+    "# clean_card_df.head(30)\n",
+    "clean_card_df.info()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import database_utils as utils\n",
+    "\n",
+    "con1 = utils.DatabaseConnector()\n",
+    "con1.upload_to_db(clean_card_df, \"dim_card_details\", \"db_credentials.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
